откорректировано по замечаниям

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
       </nav>
       <h1 class="title header__title">no focus</h1>
-      <p class="title-decor">
+      <p class="header__parapgraph title-decor">
         Что делать, когда не можешь делать ничего <br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
@@ -213,31 +213,31 @@
         <div class="gallery">
           <img
             loading="lazy"
-            class="gallery__image gallery__image--1"
+            class="gallery__image gallery__image--wide"
             src="./images/sunset.png"
             alt="закат в горах"
           />
           <img
             loading="lazy"
-            class="gallery__image gallery__image--2"
+            class="gallery__image gallery__image--tall"
             src="./images/ice-cream.png"
             alt="мороженное"
           />
           <img
             loading="lazy"
-            class="gallery__image gallery__image--3"
+            class="gallery__image gallery__image--tall"
             src="./images/tape.png"
             alt="кассета для магнитофона"
           />
           <img
             loading="lazy"
-            class="gallery__image gallery__image--4"
+            class="gallery__image"
             src="./images/books.png"
             alt="стопка книг"
           />
           <img
             loading="lazy"
-            class="gallery__image gallery__image--5"
+            class="gallery__image gallery__image--wide"
             src="./images/street.png"
             alt="улица между домами"
           />
